<resources>
    <string name="app_name">QA with BERT</string>
    <string name="password_text">Password</string>
    <string name="forgot_button">Forgot your password?</string>
    <string name="log_in_button">Log in</string>
    <string name="log_in_text">LOG IN</string>
    <string name="register_button">Sign up</string>
    <string name="username_text">Username</string>
    <string name="register_text">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm_password_error">Passwords does not match</string>
    <string name="user_already_exists">User with this name already exists</string>
    <string name="email_already_exists">User with this email already exists</string>
    <string name="email_text">Email address</string>
    <string name="wrong_password">Wrong password</string>
    <string name="wrong_username">User with this name does not exist</string>
    <string name="empty_username">Username field must not be empty</string>
    <string name="empty_password">Password field must not be empty</string>
    <string name="empty_email">Email field must not be empty</string>
    <string name="wrong_email">User with this email does not exist</string>
    <string name="send_password">Send password</string>
    <string name="password_sent">Password has been sent</string>
    <string name="registration_succeed">Registration succeed</string>
    <string name="wrong_username_or_password">Wrong username or password</string>
</resources>